src/objects/zkmulti__ShipmateServicesSettings__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Stores ZenKraft app custom settings for services settings. There should only be one record max per org. If utilized, the record must be created manually and the fields must be set manually.</description>
    <fields>
        <fullName>zkmulti__EnableAlcoholShipping__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This does not enable your FedEx account to allow for Alcohol Shipping. This allows the Shipmate to display the Alcohol Shipping option under special services. Please contact FedEx if you are unsure if your FedEx account is setup for Alcohol Shipping.</description>
        <inlineHelpText>This does not enable your FedEx account to allow for Alcohol Shipping. This allows the Shipmate to display the Alcohol Shipping option under special services. Please contact FedEx if you are unsure if your FedEx account is setup for Alcohol Shipping.</inlineHelpText>
        <label>Enable Alcohol Shipping</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zkmulti__EnableDangerousGoodsAndHazMat__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This does not enable your FedEx account for Dangerous Goods or Hazardous Materials Shipping. This allows the Shipmate to display the options under special services. Please contact FedEx if you are unsure if your FedEx account is setup for this Shipping.</description>
        <inlineHelpText>This does not enable your FedEx account for Dangerous Goods or Hazardous Materials Shipping. This allows the Shipmate to display the options under special services. Please contact FedEx if you are unsure if your FedEx account is setup for this Shipping.</inlineHelpText>
        <label>Enable Dangerous Goods and HazMat</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zkmulti__EnablePriorityAlert__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This does not enable your FedEx account to allow for Priority Alert. This allows the Shipmate to display the Priority Alert option under special services. Please contact FedEx if you are unsure if your FedEx account is setup for Priority Alert.</description>
        <inlineHelpText>This does not enable your FedEx account to allow for Priority Alert. This allows the Shipmate to display the Priority Alert option under special services. Please contact FedEx if you are unsure if your FedEx account is setup for Priority Alert.</inlineHelpText>
        <label>Enable Priority Alert</label>
        <type>Checkbox</type>
    </fields>
    <label>Zenkraft FedEx Services Settings</label>
</CustomObject>